Adding 3765 to setup list, for activity constraint.

--- a/Notebook_Joker.ipynb
+++ b/Notebook_Joker.ipynb
@@ -141,7 +141,7 @@
     "    dv0_1 = xu.with_unit(pm.Normal('dv0_1', 0, 5.), u.m/u.s)\n",
     "    s = xu.with_unit(pm.Lognormal('s', 0, 0.5), u.m/u.s)\n",
     "    baseline = np.amax(time_j) - np.amin(time_k)\n",
-    "    params = tj.JokerPrior.default(P_min=baseline, P_max=8*baseline, s=s,\n",
+    "    params = tj.JokerPrior.default(P_min=baseline, P_max=10*baseline, s=s,\n",
     "                                   v0_offsets=[dv0_1], sigma_K0=1*u.km/u.s, sigma_v = 10*u.km/u.s)"
    ]
   },
@@ -173,9 +173,9 @@
     "%%time\n",
     " \n",
     "prior_cache_file = 'prior_samples.hdf5'\n",
-    "if not os.path.exists(prior_cache_file):\n",
-    "    prior_samples = params.sample(2*10**8)\n",
-    "    prior_samples.write(prior_cache_file)\n",
+    "#if not os.path.exists(prior_cache_file):\n",
+    "prior_samples = params.sample(5*10**8)\n",
+    "prior_samples.write(prior_cache_file)\n",
     "\n",
     "with schwimmbad.SerialPool() as pool:\n",
     "    joker = tj.TheJoker(params, pool=pool)\n",
@@ -507,10 +507,11 @@
     "\n",
     "#'M0':M0, 'omega':omega\n",
     "\n",
-    "jchains = pd.DataFrame.from_dict({'P':P, 'M0':M0, 'e':e, 'omega':omega, 'K':K, 'v0':v0, 'dv0_1':dv0_1})\n",
+    "jchains = pd.DataFrame.from_dict({'P':P, 'e':e, 'omega':omega, \n",
+    "                                  'K':K, 'v0':v0, 'dv0_1':dv0_1}) #'M0':M0,\n",
     "jchains.to_csv('26161_chains_1127.csv')\n",
     "\n",
-    "labels = ['P', 'M0', 'e', 'K', 'v0', 'dv0_1']\n",
+    "labels = ['P', 'e', 'K', 'v0', 'dv0_1']\n",
     "\n",
     "fig = corner.corner(jchains[labels], labels = labels,\n",
     "                    quantiles=[0.16, 0.5, 0.84], show_titles=True, \n",
