--- a/Notebook_Statistics.ipynb
+++ b/Notebook_Statistics.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "202    3.816104\n",
+       "Name: iso_parallax, dtype: float64"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "specmatch.query('name == \"168009\"').iso_parallax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'name', 'teff', 'teff_err', 'logg', 'logg_err', 'fe',\n",
+       "       'fe_err', 'vsini', 'iso_mass', 'iso_mass_err1', 'iso_mass_err2',\n",
+       "       'iso_radius', 'iso_radius_err1', 'iso_radius_err2', 'iso_logage',\n",
+       "       'iso_logage_err1', 'iso_logage_err2', 'iso_age_err1', 'iso_age_err2',\n",
+       "       'iso_teff', 'iso_teff_err1', 'iso_teff_err2', 'iso_logg',\n",
+       "       'iso_logg_err1', 'iso_logg_err2', 'iso_fe', 'iso_fe_err1',\n",
+       "       'iso_fe_err2', 'iso_parallax', 'iso_parallax_err1', 'iso_parallax_err2',\n",
+       "       'teff_emp', 'teff_err_emp', 'radius_emp', 'radius_err_emp', 'fe_emp',\n",
+       "       'fe_err_emp'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "specmatch.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 90,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -476,7 +526,7 @@
        "[73 rows x 23 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "metadata": {
     "scrolled": true
    },
@@ -613,10 +663,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0_x', 'hostname', 'status', 'mass', 'mass_med', 'mass_minus',\n",
+       "       'mass_plus', 'axis', 'axis_med', 'axis_minus', 'axis_plus', 'per',\n",
+       "       'per_med', 'per_minus', 'per_plus', 'k', 'k_med', 'k_minus', 'k_plus',\n",
+       "       'e', 'e_med', 'e_minus', 'e_plus', 'name', 'Unnamed: 0_y', 'teff',\n",
+       "       'teff_err', 'logg', 'logg_err', 'fe', 'fe_err', 'vsini', 'iso_mass',\n",
+       "       'iso_mass_err1', 'iso_mass_err2', 'iso_radius', 'iso_radius_err1',\n",
+       "       'iso_radius_err2', 'iso_logage', 'iso_logage_err1', 'iso_logage_err2',\n",
+       "       'iso_age_err1', 'iso_age_err2', 'iso_teff', 'iso_teff_err1',\n",
+       "       'iso_teff_err2', 'iso_logg', 'iso_logg_err1', 'iso_logg_err2', 'iso_fe',\n",
+       "       'iso_fe_err1', 'iso_fe_err2', 'iso_parallax', 'iso_parallax_err1',\n",
+       "       'iso_parallax_err2', 'teff_emp', 'teff_err_emp', 'radius_emp',\n",
+       "       'radius_err_emp', 'fe_emp', 'fe_err_emp'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m_good_spec.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Take a look at imaging candidates."
+    "## Take a look at imaging candidates. Convert semi-major axis to angular separation."
    ]
   },
   {
@@ -630,11 +712,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imaging_spec = m_good_spec.query('name in [\"145675\", \"111031\", \"26161\", \"213472\", \"203473\", \"127506\", \"150554\"]')"
+    "# Convert axis from AU to pc, then use parallax to convert to angular separation.\n",
+    "m_good_spec['sep'] = m_good_spec.axis/206265. * m_good_spec.iso_parallax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      4.025709\n",
+       "1      4.025709\n",
+       "2      3.479597\n",
+       "3      3.479597\n",
+       "4      5.352651\n",
+       "         ...   \n",
+       "220    3.182628\n",
+       "221    3.182628\n",
+       "222    3.652091\n",
+       "223    2.890659\n",
+       "224    9.318217\n",
+       "Name: iso_parallax, Length: 225, dtype: float64"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m_good_spec.iso_parallax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_index = np.argsort(m_good_spec['sep'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "174    9.279226\n",
+       "175    9.279226\n",
+       "Name: iso_parallax, dtype: float64"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m_good_spec.query('name == \"95735\"').iso_parallax   #iloc[best_index[-30:],:].query('status == \"K\"')"
    ]
   },
   {
