--- a/legacy_tables/Stellar_legacy_selection.ipynb
+++ b/legacy_tables/Stellar_legacy_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,34 +805,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Unnamed: 0', 'id', 'name', 'obs', 'obstime', 'run', 'runnum', 'expnum',\n",
-       "       'outdir', 'outdir_mtime', 'teff', 'teff_err', 'teff_seg_std',\n",
-       "       'teff_uncal', 'logg', 'logg_err', 'logg_seg_std', 'logg_uncal', 'fe',\n",
-       "       'fe_err', 'fe_seg_std', 'fe_uncal', 'vsini', 'vsini_err',\n",
-       "       'vsini_seg_std', 'kmag', 'kmag_err', 'rchisq1', 'rchisq0', 'psf',\n",
-       "       'delta', 'seg_count', 'iso_mass', 'iso_mass_err1', 'iso_mass_err2',\n",
-       "       'iso_radius', 'iso_radius_err1', 'iso_radius_err2', 'iso_logage',\n",
-       "       'iso_logage_err1', 'iso_logage_err2', 'iso_age', 'iso_age_err1',\n",
-       "       'iso_age_err2', 'iso_teff', 'iso_teff_err1', 'iso_teff_err2',\n",
-       "       'iso_logg', 'iso_logg_err1', 'iso_logg_err2', 'iso_fe', 'iso_fe_err1',\n",
-       "       'iso_fe_err2', 'iso_parallax', 'iso_parallax_err1',\n",
-       "       'iso_parallax_err2'],\n",
-       "      dtype='object')"
+       "0.150130920995"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "specmatch_syn.columns"
+    "np.amin(specmatch_syn.iso_parallax)"
    ]
   },
   {
@@ -889,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +886,7 @@
        "\"\\nselect_emp_columns = ['obs','name', 'teff', 'teff_err', 'logg', \\n                        'logg_err', 'fe', 'fe_err', 'vsini', 'vsini_err',\\n                        'iso_mass', 'iso_mass_err1', 'iso_mass_err2',\\n                        'iso_radius', 'iso_radius_err1', 'iso_radius_err2', \\n                        'iso_logage', 'iso_logage_err1', 'iso_logage_err2', \\n                        'iso_age', 'iso_age_err1', 'iso_age_err2', \\n                        'iso_teff', 'iso_teff_err1', 'iso_teff_err2',\\n                        'iso_logg', 'iso_logg_err1', 'iso_logg_err2', \\n                        'iso_fe', 'iso_fe_err1', 'iso_fe_err2']\\n\""
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +931,7 @@
        "8"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1260,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1370</th>\n",
+       "      <th>565</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1320,7 +1308,31 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1523</th>\n",
+       "      <th>1372</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1524</th>\n",
        "      <td>rj63.1659</td>\n",
        "      <td>55575</td>\n",
        "      <td>5788.464478</td>\n",
@@ -1344,7 +1356,7 @@
        "      <td>0.09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1603</th>\n",
+       "      <th>1604</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1368,7 +1380,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1739</th>\n",
+       "      <th>1740</th>\n",
        "      <td>rj72.459</td>\n",
        "      <td>142267</td>\n",
        "      <td>5705.163667</td>\n",
@@ -1390,30 +1402,6 @@
        "      <td>0.18</td>\n",
        "      <td>-0.57</td>\n",
        "      <td>0.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1775</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1776</th>\n",
@@ -1463,9 +1451,33 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1778</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>12 rows × 39 columns</p>\n",
+       "<p>13 rows × 39 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1474,61 +1486,65 @@
        "371   rj13.2109   24496  5536.227771     100.0  4.472203       0.1  0.038756   \n",
        "383   rj13.2201   45184  5816.807495     100.0  4.339559       0.1  0.061403   \n",
        "564         NaN     NaN          NaN       NaN       NaN       NaN       NaN   \n",
-       "1370        NaN     NaN          NaN       NaN       NaN       NaN       NaN   \n",
+       "565         NaN     NaN          NaN       NaN       NaN       NaN       NaN   \n",
        "1371        NaN     NaN          NaN       NaN       NaN       NaN       NaN   \n",
-       "1523  rj63.1659   55575  5788.464478     100.0  4.279295       0.1 -0.311573   \n",
-       "1603        NaN     NaN          NaN       NaN       NaN       NaN       NaN   \n",
-       "1739   rj72.459  142267  5705.163667     100.0  4.462906       0.1 -0.398606   \n",
-       "1775        NaN     NaN          NaN       NaN       NaN       NaN       NaN   \n",
+       "1372        NaN     NaN          NaN       NaN       NaN       NaN       NaN   \n",
+       "1524  rj63.1659   55575  5788.464478     100.0  4.279295       0.1 -0.311573   \n",
+       "1604        NaN     NaN          NaN       NaN       NaN       NaN       NaN   \n",
+       "1740   rj72.459  142267  5705.163667     100.0  4.462906       0.1 -0.398606   \n",
        "1776        NaN     NaN          NaN       NaN       NaN       NaN       NaN   \n",
        "1777        NaN     NaN          NaN       NaN       NaN       NaN       NaN   \n",
+       "1778        NaN     NaN          NaN       NaN       NaN       NaN       NaN   \n",
        "\n",
        "      fe_err         vsini  iso_mass  ...  iso_parallax  iso_parallax_err1  \\\n",
        "97      0.06  1.974630e-07  0.901742  ...      4.262125           0.497116   \n",
        "371     0.06  8.803037e-08  0.920887  ...      5.076132           0.348662   \n",
        "383     0.06  3.472250e-07  1.013058  ...      4.179465           0.396177   \n",
        "564      NaN           NaN       NaN  ...           NaN                NaN   \n",
-       "1370     NaN           NaN       NaN  ...           NaN                NaN   \n",
+       "565      NaN           NaN       NaN  ...           NaN                NaN   \n",
        "1371     NaN           NaN       NaN  ...           NaN                NaN   \n",
-       "1523    0.06  2.956402e-07  0.853481  ...      4.512997           0.518674   \n",
-       "1603     NaN           NaN       NaN  ...           NaN                NaN   \n",
-       "1739    0.06  1.195212e-07  0.820659  ...      5.504561           0.363623   \n",
-       "1775     NaN           NaN       NaN  ...           NaN                NaN   \n",
+       "1372     NaN           NaN       NaN  ...           NaN                NaN   \n",
+       "1524    0.06  2.956402e-07  0.853481  ...      4.512997           0.518674   \n",
+       "1604     NaN           NaN       NaN  ...           NaN                NaN   \n",
+       "1740    0.06  1.195212e-07  0.820659  ...      5.504561           0.363623   \n",
        "1776     NaN           NaN       NaN  ...           NaN                NaN   \n",
        "1777     NaN           NaN       NaN  ...           NaN                NaN   \n",
+       "1778     NaN           NaN       NaN  ...           NaN                NaN   \n",
        "\n",
        "      iso_parallax_err2    obs_emp  teff_emp  teff_err_emp  radius_emp  \\\n",
        "97            -0.500126  rj06.1068    5748.0         110.0       1.069   \n",
        "371           -0.394953  rj13.2109    5432.0         110.0       1.099   \n",
        "383           -0.450673  rj13.2201    5813.0         110.0       1.111   \n",
        "564                 NaN        NaN       NaN           NaN         NaN   \n",
-       "1370                NaN        NaN       NaN           NaN         NaN   \n",
+       "565                 NaN        NaN       NaN           NaN         NaN   \n",
        "1371                NaN        NaN       NaN           NaN         NaN   \n",
-       "1523          -0.564421  rj63.1659    5789.0         110.0       1.118   \n",
-       "1603                NaN        NaN       NaN           NaN         NaN   \n",
-       "1739          -0.407721   rj72.459    5711.0         110.0       1.093   \n",
-       "1775                NaN        NaN       NaN           NaN         NaN   \n",
+       "1372                NaN        NaN       NaN           NaN         NaN   \n",
+       "1524          -0.564421  rj63.1659    5789.0         110.0       1.118   \n",
+       "1604                NaN        NaN       NaN           NaN         NaN   \n",
+       "1740          -0.407721   rj72.459    5711.0         110.0       1.093   \n",
        "1776                NaN        NaN       NaN           NaN         NaN   \n",
        "1777                NaN        NaN       NaN           NaN         NaN   \n",
+       "1778                NaN        NaN       NaN           NaN         NaN   \n",
        "\n",
        "      radius_err_emp  fe_emp  fe_err_emp  \n",
        "97              0.18   -0.24        0.09  \n",
        "371             0.18   -0.01        0.09  \n",
        "383             0.18    0.03        0.09  \n",
        "564              NaN     NaN         NaN  \n",
-       "1370             NaN     NaN         NaN  \n",
+       "565              NaN     NaN         NaN  \n",
        "1371             NaN     NaN         NaN  \n",
-       "1523            0.18   -0.45        0.09  \n",
-       "1603             NaN     NaN         NaN  \n",
-       "1739            0.18   -0.57        0.09  \n",
-       "1775             NaN     NaN         NaN  \n",
+       "1372             NaN     NaN         NaN  \n",
+       "1524            0.18   -0.45        0.09  \n",
+       "1604             NaN     NaN         NaN  \n",
+       "1740            0.18   -0.57        0.09  \n",
        "1776             NaN     NaN         NaN  \n",
        "1777             NaN     NaN         NaN  \n",
+       "1778             NaN     NaN         NaN  \n",
        "\n",
-       "[12 rows x 39 columns]"
+       "[13 rows x 39 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1549,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -1747,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
