Now using proper radius uncertainty, isoclassify rather than smemp.

--- a/legacy_tables/Stellar_legacy_selection.ipynb
+++ b/legacy_tables/Stellar_legacy_selection.ipynb
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,7 +1651,7 @@
     "legacy_syn['radius_c'] = legacy_syn['iso_radius']\n",
     "legacy_emp['radius_c'] = legacy_emp['iso_radius_emp']\n",
     "legacy_syn['radius_err_c'] = 0.5*(legacy_syn['iso_radius_err1'] - legacy_syn['iso_radius_err2'])\n",
-    "legacy_emp['radius_err_c'] = legacy_emp['radius_err_emp']\n",
+    "legacy_emp['radius_err_c'] = 0.5*(legacy_emp['iso_radius_err1_emp'] - legacy_emp['iso_radius_err2_emp'])\n",
     "\n",
     "legacy_syn['mass_c'] = legacy_syn['iso_mass']\n",
     "legacy_emp['mass_c'] = legacy_emp['iso_mass_emp']\n",
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
        "0.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1681,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
        "Name: logg_err_c, Length: 537, dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1805,27 +1805,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.126889376305"
+       "0.03627476127875"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.amin(legacy_choice.radius_c)"
+    "np.amin(legacy_choice.fe_err_c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1873,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1886,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1895,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1923,47 +1923,37 @@
        "      <th>teff_c</th>\n",
        "      <th>mass_c</th>\n",
        "      <th>mass_err_c</th>\n",
-       "      <th>iso_mass</th>\n",
-       "      <th>iso_mass_err1</th>\n",
-       "      <th>iso_mass_err2</th>\n",
        "      <th>radius_c</th>\n",
        "      <th>radius_err_c</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>527</th>\n",
-       "      <td>hip106924</td>\n",
-       "      <td>5479.351413</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.05</td>\n",
+       "      <th>616</th>\n",
+       "      <td>95735</td>\n",
+       "      <td>3513.0</td>\n",
+       "      <td>0.391846</td>\n",
+       "      <td>0.008168</td>\n",
+       "      <td>0.369083</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          name       teff_c  mass_c  mass_err_c  iso_mass  iso_mass_err1  \\\n",
-       "527  hip106924  5479.351413     0.9        0.05       0.0            0.0   \n",
-       "\n",
-       "     iso_mass_err2  radius_c  radius_err_c  \n",
-       "527            0.0       0.9          0.05  "
+       "      name  teff_c    mass_c  mass_err_c  radius_c  radius_err_c\n",
+       "616  95735  3513.0  0.391846    0.008168  0.369083           NaN"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "legacy_choice.query('name == \"hip106924\"')[['name', 'teff_c', 'mass_c', 'mass_err_c', \n",
-    "                                            'iso_mass', 'iso_mass_err1', 'iso_mass_err2', \n",
-    "                                            'radius_c', 'radius_err_c']]"
+    "legacy_choice.query('name == \"95735\"')[['name', 'teff_c', 'mass_c', 'mass_err_c',  \n",
+    "                                        'radius_c', 'radius_err_c']]"
    ]
   },
   {
