Renamed repo, cleaned up.

--- a/Notebook_Joker.ipynb
+++ b/Notebook_Joker.ipynb
@@ -147,18 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 4h 27min 12s, sys: 39.9 s, total: 4h 27min 52s\n",
-      "Wall time: 8h 16min 49s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     " \n",
@@ -167,9 +158,11 @@
     "    prior_samples = params.sample(2*10**8)\n",
     "    prior_samples.write(prior_cache_file)\n",
     "\n",
-    "with schwimmbad.SerialPool() as pool: #SerialPool\n",
+    "with schwimmbad.SerialPool() as pool: #SerialPool MultiPool\n",
     "    joker = tj.TheJoker(params, pool=pool)\n",
-    "    samples = joker.rejection_sample([rvdata_j, rvdata_k], prior_cache_file)"
+    "    samples = joker.rejection_sample([rvdata_j, rvdata_k], prior_cache_file)\n",
+    "    \n",
+    "os.remove(prior_cache_file)"
    ]
   },
   {
